# Mini-Attention

./: .gitignore  Readme.md  all_perf.csv  entrypoint.sh  main.py  pyproject.toml  setup.sh
Attention-Research/Flash/: flash_attention_v1.py
Attention-Research/Hybrid/: hybrid_linear.py
Attention-Research/Standard/: Readme.md  gqa.py  mha.py  mha_QKV_combined.py  mha_einsum.py  scaled_dot_product.py
Pytorch/: FlashAttention_empty.ipynb  attention_visualization_edu.py  mha_implementations_cuda.py  requirements.txt  sdpa.py  vis.py  vis_speed_memory_mha.py
_staging_kv_quant_repo/Infinite_context/: base.py
_staging_kv_quant_repo/kv_cache/: Paged_attention_from_scratch.py  base.py  benchmark.py  disabled_kv_cache.py  enabled_kv_cache.py  paged_attention_vllm.py
experiments/: bench_sageattn.py  video_quality_test.py
experiments/ml150/: Multi-Head Attention Forward.py
experiments/mxfp4/: mxfp4_gemm.py
kernels/FA/: benchmark.py  block_segmentation.py  standard.py
kernels/Flash_attention/: online_softmax.py
kernels/Infinite_context/: base.py
kernels/Kv_Cache/: Paged_attention_from_scratch.py  base.py  benchmark.py  disabled_kv_cache.py  enabled_kv_cache.py  paged_attention_vllm.py
kernels/ML150/: Multi-Head Attention Forward.py
kernels/Ring_attention/: RingAttention.py
kernels/Standard/: gqa.py  mha_pytorch_sdpa.py  mqa.py
kernels/diffusion_attn/: BENCHMARKS.md
models/: load_model.py
notes/: pipeline_design.md  sm120_vs_sm100.md  why_mma_sync.md
saved_model_tokenizer/: tokenizer_config.json
tests/: test_correctness.py
(+85 files in other folders)
