[project]

name = "mini-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "torch",
    "transformers",
    "triton",
    "vllm",
]
# pyproject.toml
[tool.setuptools.packages.find]
include = ["models*", "kernels*", "experiments*"]
exclude = ["figures*"]