[project]

name = "mini-attention"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib",
    "numpy",
    "torch>=2.11.0",   # 2.11.0+cu128 required for RTX 5090 (SM120) support
    "transformers",
    "triton",
    "vllm",
]
# pyproject.toml
[tool.setuptools.packages.find]
include = ["models*", "kernels*", "experiments*"]
exclude = ["figures*"]